--- a/movie_dataset/preprocess.ipynb
+++ b/movie_dataset/preprocess.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from sqlalchemy import create_engine\n",
     "import pandas as pd\n",
     "from datetime import datetime, timedelta"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +23,7 @@
        "(45439, 3)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,15 +157,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "credits.to_csv('preprocess/credits.csv',index=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -187,7 +179,6 @@
    ],
    "source": [
     "print(keywords.duplicated().sum(), \"keywords duplicated\")\n",
-    "keywords.drop_duplicates(inplace=True)\n",
     "print(keywords.shape)"
    ]
   },
@@ -309,15 +300,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "keywords.to_csv('preprocess/keywords.csv',index=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -340,7 +322,6 @@
    ],
    "source": [
     "print(links.duplicated().sum(), \"links duplicated\")\n",
-    "links.drop_duplicates(inplace=True)\n",
     "print(links.shape)"
    ]
   },
@@ -368,15 +349,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "links.to_csv('preprocess/links.csv',index=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -399,7 +371,6 @@
    ],
    "source": [
     "print(ratings.duplicated().sum(), \"ratings duplicated\")\n",
-    "ratings.drop_duplicates(inplace=True)\n",
     "print(ratings.shape)"
    ]
   },
@@ -425,73 +396,6 @@
    ],
    "source": [
     "ratings.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def change_datetime(total_seconds):\n",
-    "    # Tạo một đối tượng timedelta từ tổng số giây\n",
-    "    time_delta = timedelta(seconds=total_seconds)\n",
-    "\n",
-    "    # Tạo một đối tượng datetime bắt đầu từ năm 1995\n",
-    "    start_date = datetime(1970, 1, 1)\n",
-    "\n",
-    "    # Thêm timedelta vào start_date để tính ngày và giờ mới\n",
-    "    result_date = start_date + time_delta\n",
-    "    return result_date"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ratings['timestamp']=ratings['timestamp'].apply(change_datetime)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0          2015-03-09 22:52:09\n",
-       "1          2015-03-09 23:07:15\n",
-       "2          2015-03-09 22:52:03\n",
-       "3          2015-03-09 22:52:26\n",
-       "4          2015-03-09 22:52:36\n",
-       "                   ...        \n",
-       "26024284   2009-10-31 23:26:04\n",
-       "26024285   2009-10-31 23:33:52\n",
-       "26024286   2009-10-31 23:29:24\n",
-       "26024287   2009-11-01 00:06:30\n",
-       "26024288   2009-10-31 23:30:58\n",
-       "Name: timestamp, Length: 26024289, dtype: datetime64[ns]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ratings['timestamp']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ratings.to_csv('preprocess/ratings.csv',index=False)"
    ]
   },
   {
@@ -596,15 +500,6 @@
    "outputs": [],
    "source": [
     "movies.drop(temp.index,inplace=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "movies.to_csv('preprocess/movies.csv',index=False)"
    ]
   }
  ],
