--- a/movie_dataset/preprocess.ipynb
+++ b/movie_dataset/preprocess.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -23,7 +23,7 @@
        "(45439, 3)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +86,7 @@
        "(45450, 20)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -115,21 +115,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "37 duplicates in credits\n",
-      "(45439, 3)\n"
+      "0 duplicates in credits\n",
+      "(45432, 3)\n"
      ]
     }
    ],
    "source": [
     "print(credits.duplicated().sum(),'duplicates in credits')\n",
     "credits.drop_duplicates(inplace=True)\n",
+    "credits.drop_duplicates(subset=['id'],inplace=True)\n",
     "print(credits.shape)"
    ]
   },
@@ -154,6 +155,15 @@
    ],
    "source": [
     "credits[(credits['crew']=='[]') & (credits['cast']=='[]')].count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "credits.to_csv('cleaned/credits.csv',index=False)"
    ]
   },
   {
@@ -407,22 +417,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13 movies duplicated\n",
-      "(45453, 20)\n"
+      "0 movies duplicated\n",
+      "(45433, 20)\n"
      ]
     }
    ],
    "source": [
     "print(movies.duplicated().sum(), \"movies duplicated\")\n",
     "movies.drop_duplicates(inplace=True)\n",
+    "movies.drop_duplicates(subset=['id'],inplace=True)\n",
     "print(movies.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies.to_csv('cleaned/movies.csv',index=False)"
    ]
   },
   {
