--- a/notebooks/02_working_with_dataframe.ipynb
+++ b/notebooks/02_working_with_dataframe.ipynb
@@ -11,26 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spark.stop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import findspark\n",
-    "findspark.init()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,9 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/local/spark/python/pyspark/sql/context.py:112: FutureWarning: Deprecated in 3.0.0. Use SparkSession.builder.getOrCreate() instead.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
    "source": [
     "spark = (SparkSession.builder.appName(\"pyspark-dataframe-demo-{}\".format(datetime.today()))\n",
     "        .master(\"spark://spark-master:7077\")      \n",
@@ -55,9 +45,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <div>\n",
+       "            <p><b>SparkContext</b></p>\n",
+       "\n",
+       "            <p><a href=\"http://a389889a3491:4040\">Spark UI</a></p>\n",
+       "\n",
+       "            <dl>\n",
+       "              <dt>Version</dt>\n",
+       "                <dd><code>v3.3.3</code></dd>\n",
+       "              <dt>Master</dt>\n",
+       "                <dd><code>spark://spark-master:7077</code></dd>\n",
+       "              <dt>AppName</dt>\n",
+       "                <dd><code>pyspark-dataframe-demo-2023-10-09 10:38:50.146724</code></dd>\n",
+       "            </dl>\n",
+       "        </div>\n",
+       "        "
+      ],
+      "text/plain": [
+       "<SparkContext master=spark://spark-master:7077 appName=pyspark-dataframe-demo-2023-10-09 10:38:50.146724>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "sc = spark.sparkContext\n",
     "sc"
@@ -80,11 +99,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+---+---+\n",
+      "|  _1| _2| _3|\n",
+      "+----+---+---+\n",
+      "|AIDE|FDE|  3|\n",
+      "+----+---+---+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "l = [(\"AIDE\", \"FDE\", 3)]\n",
     "spark.createDataFrame(l).show()"
@@ -92,20 +124,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---------+------+------+\n",
+      "|institute|course|number|\n",
+      "+---------+------+------+\n",
+      "|     AIDE|   FDE|     3|\n",
+      "+---------+------+------+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "spark.createDataFrame(l, [\"institute\", \"course\", \"number\"]).show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>institute</th>\n",
+       "      <th>course</th>\n",
+       "      <th>number</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AIDE</td>\n",
+       "      <td>FDE</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  institute course  number\n",
+       "0      AIDE    FDE       3"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "pd.DataFrame([{'institute': 'AIDE', 'course': 'FDE', 'number': 3}])"
@@ -113,11 +205,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+---+-----+\n",
+      "|age| name|\n",
+      "+---+-----+\n",
+      "|  1|Alice|\n",
+      "+---+-----+\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "d = [{\"name\": \"Alice\", \"age\": 1}]\n",
     "spark.createDataFrame(d).show()"
@@ -1361,7 +1466,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.9.13"
   },
   "name": "PySparkSQL",
   "notebookId": 2217893066036922
